Exit the app using the Exit button
on destroy calls stopFirestoreListenerService()

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SpeakerFeedback</string>
     <string name="activeLabel">Active</string>
     <string name="questionLabel">Question</string>
+    <string name="exit">Exit</string>
 </resources>
