--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="activeLabel">Active</string>
     <string name="questionLabel">Question</string>
     <string name="exit">Exit</string>
+    <string name="active">Active</string>
+    <string name="previous">Previous</string>
+    <string name="previous">Previous</string>
 </resources>
