--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,12 @@
     <string name="app_name">SpeakerFeedback</string>
     <string name="activeLabel">Active</string>
     <string name="questionLabel">Question</string>
-    <string name="exit">Exit</string>
+    <string name="exit">Exit Room</string>
     <string name="active">Active</string>
     <string name="previous">Previous</string>
     <string name="enterRoom">Enter Room</string>
     <string name="roomID">Room ID</string>
     <string name="password">Password</string>
+    <string name="closeApp">Close and Exit</string>
+    <string name="close">Close Room</string>
 </resources>
